Implement: cart add/remove/toggle functionality

--- a/src/components/product-filters/ProductFilters.css
+++ b/src/components/product-filters/ProductFilters.css
@@ -55,6 +55,8 @@
 
 :local .attributesWrapper {
     display: none;
+    max-height: 40vh;
+    overflow-y: auto;
 }
 
 :local .attributesWrapperOpen {
