--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -83,14 +83,16 @@ $height: 60px;
         float: right;
         margin-top: 4px;
     };
-};
+}
+
 :local .dropdown {
     display: none;
     left: 0;
     width: 950px;
     position: absolute;
     border: solid 1px #ccc;
-
+    background-color: #fff;
+    z-index: 10;
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
     border: 1px solid rgba(0,0,0,.15);
 }
@@ -98,6 +100,19 @@ $height: 60px;
 :local .dropdownOpen {
     display: block;
 }
+
+:local .dropdownContent {
+    padding: 15px;
+    max-height: 350px;
+    overflow-y: auto;
+}
+
+
+:local .btnPrint {
+    @include resetButtonStyles;
+    color: #2196f3;
+}
+
 
 :local .dropdownSmall {
     width: 230px;
