Implement: print product initial layout

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -11,6 +11,10 @@ $height: 60px;
 
     height: $height;
     background-color: #023466;
+
+    @media print {
+      display: none;
+    }
 }
 
 :local .floatLeft {
