--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -13,6 +13,10 @@
     background: #f7f7f7;
     box-shadow: 0 3px 3px #8c8b8b;
     transition: right .7s;
+
+    @media print {
+        display: none;
+    }
 }
 
 :local .collapsed {
