--- a/src/components/product-print/ProductPrint.css
+++ b/src/components/product-print/ProductPrint.css
@@ -2,3 +2,32 @@
 
 
 }
+
+
+:local .productName {
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 30px 0;
+}
+
+
+:local .mainInfo,
+:local .techInfo {
+    border: solid 1px #ccc;
+    padding: 10px;
+}
+
+
+:local .image {
+    width: 270px;
+    float: left;
+    margin: 0 10px 10px 0;
+    display: inline-block;
+}
+
+:local .specList {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
