--- a/deploy/templates/nginx.j2
+++ b/deploy/templates/nginx.j2
@@ -8,7 +8,7 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
 
     location /static {
-        alias {{static_root}};
+        alias {{site_folder_path}};
     }
 
     location /media {
