Changes to some UI elements

--- a/src/components/search-form/SearchForm.css
+++ b/src/components/search-form/SearchForm.css
@@ -1,63 +1,54 @@
 :local .className {
-    background-color: #d6d6d6;
-    padding: 15px;
-    border-bottom: 1px solid #ccc;
-    position: relative;
+	background-color: #d6d6d6;
+	padding: 15px;
+	border-bottom: 1px solid #ccc;
+	position: relative;
+	text-align: center;
+	min-width: 220px;
 }
 
 
 :local .input {
-    z-index: 1;
-    border: 1px solid #ccc;
-    border-radius: 11px 0 0 11px;
-    border-right: none;
-    position: relative;
-    z-index: 2;
-    width: 215px;
-    margin-bottom: 0;
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-
-
-    &:focus {
-        border-color: #66afe9;
-        outline: 0;
-        box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
-    }
+	border: 1px solid #ccc;
+	border-radius: 11px 0 0 11px;
+	z-index: 2;
+	width: 150px;
+	margin-bottom: 0;
+	height: 34px;
+	padding: 6px 12px;
+	font-size: 12px;
+	line-height: 1.42857143;
+	color: #555;
+	background-color: #fff;
+	background-image: none;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+	&:focus {
+		border-color: #66afe9;
+		outline: 0;
+		box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
+	}
 }
 
 
 :local .button {
-    position: absolute;
-    z-index: 3;
-    top: 15px;
-    right: 10px;
-
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1;
-    color: #555;
-    text-align: center;
-    background-color: #fff;
-    border-radius: 0 11px 11px 0;
-    border: 1px solid #ccc;
-    border-left: none;
-    cursor: pointer;
-    white-space: nowrap;
-    vertical-align: middle;
-    border-collapse: separate;
-
-
-    &:hover {
-        color: #2196f3;
-    }
+	z-index: 3;
+	height: 34px;
+	padding: 6px 12px;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1;
+	color: #555;
+	text-align: center;
+	background-color: #fff;
+	border-radius: 0 11px 11px 0;
+	border: 1px solid #ccc;
+	border-left: none;
+	cursor: pointer;
+	white-space: nowrap;
+	vertical-align: middle;
+	border-collapse: separate;
+	&:hover {
+		color: #2196f3;
+	}
 }
