--- a/src/components/homepage/Homepage.css
+++ b/src/components/homepage/Homepage.css
@@ -1,54 +1,61 @@
 @import '../../scss/clearfix';
 
 :local .className {
-    @include clearfix;
+	@include clearfix;
 }
 
 
 :local .mapWrapper {
-    float: left;
-    width: 83.33333333%;
-    padding: 0 25px;
-    height: calc(100vh - 60px);
-    background-image: url(../../assets/homepage-bg.png);
-    background-position: top;
-    background-size: 100% auto;
-    overflow-y: auto;
-    background-repeat: no-repeat;
-    background-color: hsla(0,0%,77%,.77);
+	float: left;
+	width: 83.33333333%;
+	padding: 0 25px;
+	height: calc(100vh - 60px);
+	background-image: url(../../assets/homepage-bg.png);
+	background-position: top;
+	background-size: 100% auto;
+	overflow-y: auto;
+	background-repeat: no-repeat;
+	background-color: hsla(0, 0%, 77%, .77);
 }
 
 
 :local .manufacturerRow {
-    @include clearfix();
-    height: 80px;
-    &:first-child {
-        margin-top: 50px;
-    }
+	@include clearfix();
+	height: 80px;
+
+	&:first-child {
+		margin-top: 50px;
+	}
 
 }
 
 :local .manufacturer {
-    float: left;
-    display: block;
-    img {
-        max-height: 60px;
-        max-width: 100%;
-    }
+	float: left;
+	display: block;
+	width: 200px;
+	text-align: center;
+	background-color: #fff;
+	img {
+		height: 60px;
+		margin-top: 5px;
+		max-width: 100%;
+	}
 }
 
 :local .categories {
-    float: left;
-    display: block;
-    margin-left: 80px;
-    img {
-        max-height: 60px;
-        max-width: 100%;
-    }
+	float: left;
+	display: block;
+	margin-left: 80px;
+	img {
+		max-height: 70px;
+		width: 100%;
+	}
 }
 
 
 :local .category {
-    display: inline-block;
-    margin-left: 50px;
-};
+	margin-left: 5px;
+	width: 70px;
+}
+
+;
